--- a/site/assets/css/components.css
+++ b/site/assets/css/components.css
@@ -59,7 +59,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 8px;
-    margin-bottom: 80px;
+    margin-bottom: 10vh;
 }
 
 .user img {
@@ -98,11 +98,11 @@ nav {
 }
 
 .sidebar .item a {
-    padding: 14px;
+    padding: 2vh;
     cursor: pointer;
     border-radius: 10px;
-    margin-left: 10px;
-    margin-bottom: 15px;
+    margin-left: 1.5vh;
+    margin-bottom: 2vh;
     transition: background-color 0.3s, transform 0.2s;
 }
 
@@ -121,7 +121,7 @@ nav {
     display: flex;
     align-items: center;
     color: var(--cor3);
-    gap: 14px;
+    gap: 2vh;
 }
 
 .sidebar .ativo {
