--- a/site/assets/css/reports.css
+++ b/site/assets/css/reports.css
@@ -17,7 +17,7 @@
 .container-rel {
     padding: 20px;
     display: grid;
-    grid-template-rows: 500px 450px 550px 500px;
+    grid-template-rows: 500px 450px 550px;
     gap: 20px;
     flex-direction: column;
     border-radius: 10px;
